--- a/practice-two/src/cart.html
+++ b/practice-two/src/cart.html
@@ -69,10 +69,6 @@
                   <p class="cart__info-desc">Size:</p>
                   <p class="desc cart__info-desc">Large</p>
                 </div>
-                <div class="cart__info-inline">
-                  <p class="cart__info-desc">Color:</p>
-                  <p class="desc cart__info-desc">While</p>
-                </div>
               </div>
               <a class="icon-delete"></a>
             </div>
@@ -80,7 +76,11 @@
               <div class="product__price price">
                 <p>&#36;120</p>
               </div>
-              <p>asdasd</p>
+              <div class="wrapper-cart">
+                <span class="minus icon-span-cart"></span>
+                <span class="num">1</span>
+                <span class="plus icon-plus-cart"></span>
+              </div>
             </div>
           </div>
         </div>
@@ -105,7 +105,11 @@
               <div class="product__price price">
                 <p>&#36;120</p>
               </div>
-              <p>asdasd</p>
+              <div class="wrapper-cart">
+                <span class="minus icon-span-cart"></span>
+                <span class="num">1</span>
+                <span class="plus icon-plus-cart"></span>
+              </div>
             </div>
           </div>
         </div>
@@ -119,10 +123,6 @@
                   <p class="cart__info-desc">Size:</p>
                   <p class="desc cart__info-desc">Large</p>
                 </div>
-                <div class="cart__info-inline">
-                  <p class="cart__info-desc">Color:</p>
-                  <p class="desc cart__info-desc">While</p>
-                </div>
               </div>
               <a class="icon-delete"></a>
             </div>
@@ -130,7 +130,11 @@
               <div class="product__price price">
                 <p>&#36;120</p>
               </div>
-              <p>asdasd</p>
+              <div class="wrapper-cart">
+                <span class="minus icon-span-cart"></span>
+                <span class="num">1</span>
+                <span class="plus icon-plus-cart"></span>
+              </div>
             </div>
           </div>
         </div>
@@ -237,6 +241,25 @@
       </fieldset>
     </footer>
     <!-- footer end  -->
+    <script>
+      const plus = document.querySelector(".plus"),
+        minus = document.querySelector(".minus"),
+        num = document.querySelector(".num");
+      let a = 1;
+      plus.addEventListener("click", () => {
+        a++;
+        a = a < 10 ?  + a : a;
+        num.innerText = a;
+      });
+
+      minus.addEventListener("click", () => {
+        if (a > 1) {
+          a--;
+          a = a < 10 ?  + a : a;
+          num.innerText = a;
+        }
+      });
+    </script>
 </body>
 
 </html>
