--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -38,7 +38,7 @@
       </form >
       <div class="navbar__option icon">
         <a class="link icon-search" aria-label="icon-search" href="javascrip:void(0)"></a>
-        <a class="link icon-cart" aria-label="icon-cart" href="javascrip:void(0)"></a>
+        <a class="link icon-cart" aria-label="icon-cart" href="cart.html"></a>
         <a class="link icon-login" aria-label="icon-login" href="javascrip:void(0)"></a>
       </div>
     </nav>
